Get All and Create

--- a/Web.config
+++ b/Web.config
@@ -10,6 +10,11 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+
+	<connectionStrings>
+		<add name ="SoyConString" connectionString="Data Source = (LocalDB)\MSSQLLocalDB; AttachDbFilename = |DataDirectory|\SoyDB.mdf; Integrated Security = True"/>
+	</connectionStrings>
+	
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
